--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "@actions/core": "^1.4.0",
     "@actions/exec": "^1.0.4",
     "@actions/github": "^5.0.0",
-    "@actions/tool-cache": "^1.7.1",
-    "@types/node-fetch": "^2.5.10",
-    "node-fetch": "^2.6.1"
+    "@actions/tool-cache": "^1.7.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
