--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
-        npm install
-        npm run all
-
-  test: # make sure the action works on a clean machine without building
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: ./
+        yarn
+        yarn run all
