--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
-    "test": "jest",
-    "all": "yarn run build && yarn run format && yarn run lint && yarn run pack && yarn run test"
+    "all": "yarn run build && yarn run format && yarn run lint && yarn run pack"
   },
   "repository": {
     "type": "git",
@@ -32,18 +31,13 @@
     "@actions/tool-cache": "^1.7.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
     "@types/node": "^12.7.12",
     "@typescript-eslint/parser": "^2.8.0",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^2.0.0",
-    "eslint-plugin-jest": "^22.21.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
     "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
-    "ts-jest": "^24.2.0",
     "typescript": "^3.6.4"
   }
 }
