--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^2.8.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^5.16.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-github": "^2.0.0",
     "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
