--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "description": "ArgoCD Diff GitHub Action",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "ncc build src/main.ts",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
-    "pack": "ncc build",
-    "all": "yarn run build && yarn run format && yarn run lint && yarn run pack"
+    "all": "yarn run build && yarn run format && yarn run lint"
   },
   "repository": {
     "type": "git",
